bugfix PUT and POST per assignment logic, and fix tests
